@@ -32,11 +32,11 @@ data:extend({
     type = "item",
     name = "pm-copper-powder",
     icon_size = 64,
-    icon = "__periodic-madness__/graphics/icons/ores/copper-chunks.png",
+    icon = "__periodic-madness__/graphics/icons/copper-powder.png",
     pictures =
     {
-      { filename = "__periodic-madness__/graphics/icons/ores/copper-chunks.png",   size = 64, scale = 0.5 },
-      { filename = "__periodic-madness__/graphics/icons/ores/copper-chunks-2.png", size = 64, scale = 0.5 }
+      { filename = "__periodic-madness__/graphics/icons/copper-powder.png",   size = 64, scale = 0.5 },
+      { filename = "__periodic-madness__/graphics/icons/copper-powder-2.png", size = 64, scale = 0.5 }
     },
     subgroup = "pm-advanced-copper-tm",
     order = "a",
