@@ -79,6 +79,7 @@ Date: 2025-12-07
     - Gave zinc vapour its own icon.
     - Gave barium vapour its own icon.
     - Fixed radium ore being in the wrong subgroup.
+    - Gave copper powder its own icon.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.514
